# deep-learning-project

./: .gitignore  Audio_Super_Resolution.ipynb  README.md  main.py  pyproject.toml
config/: default.yaml
report/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.tex  references.bib
scripts/: dataset.py  demo.py  enhance.py  evaluate.py  train.py
src/audio_sr/data/: dataset.py
src/audio_sr/models/: losses.py  unet.py
src/audio_sr/training/: metrics.py  trainer.py
src/audio_sr/utils/: audio_io.py
